add log/{id}?timestamp=... endpoint
