# openapi.yaml
@@ -53,31 +53,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/RidePage"
-  /log:
+  /log/{coasterID}:
     post:
       operationId: logRide
-      summary: log a single ride on a coaster. must populate either name of coaster or coaster id.
+      summary: log a single views on a coaster. must populate either name of coaster or coaster id.
       parameters:
-        - name: coasterName
-          in: query
+        - name: coasterID
+          in: path
           required: true
-          description: the name of the coaster you are logging a ride on
+          description: the uuid of the coaster you are logging a views on
           schema:
-            type: string
-        - name: coasterUUID
-          in: query
-          required: true
-          description: the uuid of the coaster you are logging a ride on
-          schema:
-            type: object
             $ref: "#/components/schemas/UUID"
         - name: timestamp
           in: query
           required: true
-          description: the time at which the ride is being recorded
+          description: the time at which the views is being recorded
           schema:
             type: string
-            format: time
+            format: date-time
       responses:
         "200":
           description: Success
